Finished header for website

--- a/index.html
+++ b/index.html
@@ -3,23 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Myles Parker | Portfolio</title>
 </head>
 <body>
     <header class="fade">
-        <div id="nav">
-            <ul>
-                <li><a href="#">Here</a></li>
-                <li><a href="#">Is</a></li>
-                <li><a href="#">A</a></li>
-                <li><a href="#">Test</a></li>
-                <li><a href="#">Now</a></li>
-            </ul>
+        <div id="overlay">
+            <div id="mobileNav" style="display: none;">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Resumè</a></li>
+                </ul>
+            </div>
+            <div id="nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Resumè</a></li>
+                </ul>
+            </div>
+            <div id="main-heading">
+                <h1><a href="index.html">Myles Parker</a></h1>
+                <hr>
+                <h3>The Story of a Young Programmer Who Sought Greatness</h3>
+                <a href="#projects-header" class="scrolly" id="start-button">
+                    <span>Start</span>
+                </a>
+            </div>
         </div>
     </header>
+
     <div id="container">
         <div id="projects-header">
+
+        </div>
+        <div id="carousel">
+
+        </div>
+        <div id="content">
 
         </div>
     </div>
