Added functional mobile menu bar

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <title>Myles Parker | Portfolio</title>
 </head>
 <body>
+    <div id="mobile-nav">
+        <a class="mob-navi" href="#">Home</a>
+        <a class="mob-navi" href="#">About Me</a>
+        <a class="mob-navi" href="#">Contact</a>
+        <a class="mob-navi" href="#">Projects</a>
+        <a class="mob-navi" href="#">Resumè</a>
+    </div>
     <header class="fade">
         <div id="overlay">
-            <div id="mobileNav" style="display: none;">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Resumè</a></li>
-                </ul>
+
+            <div id="menu-tag">
+                <i class="fa fa-bars" aria-hidden="true"></i>
             </div>
             <div id="nav">
                 <ul>
