--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Myles Parker | Portfolio</title>
 </head>
 <body>
-    <div id="mobile-nav">
-        <a class="mob-navi" href="#">Home</a>
-        <a class="mob-navi" href="#">About Me</a>
-        <a class="mob-navi" href="#">Contact</a>
-        <a class="mob-navi" href="#">Projects</a>
-        <a class="mob-navi" href="#">Resumè</a>
-    </div>
+
     <header class="fade">
         <div id="overlay">
-
+            <div id="mobile-nav">
+                <a class="mob-navi" href="#">Home</a>
+                <a class="mob-navi" href="#">About Me</a>
+                <a class="mob-navi" href="#">Contact</a>
+                <a class="mob-navi" href="#">Projects</a>
+                <a class="mob-navi" href="#">Resumè</a>
+            </div>
             <div id="menu-tag">
                 <i class="fa fa-bars" aria-hidden="true"></i>
             </div>
@@ -34,26 +34,112 @@
                 <h1><a href="index.html">Myles Parker</a></h1>
                 <hr>
                 <h3>The Story of a Young Programmer Who Sought Greatness</h3>
-                <a href="#projects-header" class="scrolly" id="start-button">
-                    <span>Start</span>
+                <a href="#intro" class="scrolly" id="start-button">
+                    <span>
+                        <!--<i class="fa fa-arrow-down" aria-hidden="true"></i>-->
+                        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                    </span>
                 </a>
             </div>
         </div>
     </header>
 
     <div id="container">
-        <div id="projects-header">
-
+        <div id="intro" class="shadow-bottom">
+            <div id="image">
+                <img id="profile-img" src="images/profile-picture.jpg">
+            </div>
+            <div id="intro-description">
+                <h3>Hi, I'm Myles.</h3>
+                <p>I'm 18 years old and I absolutely love to program. Ever since I was a little child, I thought computers were the best thing ever. I watched my dad (now a system admin) control the computer and tell it to do things. I wanted that kind of power over technology. I wanted to be able to use it to my advantage to create. Last year I started programming in Java for a high school class. I also took a summer class where we learned web development. Now I am able to program in C, HTML, CSS, JavaScript, Java, and SQL.</p>
+            </div>
+        </div>
+        <div id="projects-heading" class="shadow-bottom">
+            <h2>Projects</h2>
+            <h3>Take a look at the projects I've been working on. I have games and apps that can help you better enjoy your day!</h3>
         </div>
         <div id="carousel">
-
+            <div>
+                <img class="project-img" src="images/mistborn.jpg">
+                <div class="project-card">
+                    <h5>Item 1</h5>
+                    <span>Here is some information about item 1</span>
+                </div>
+            </div>
+            <div>
+                <img class="project-img" src="images/movies.jpg">
+                <div class="project-card">
+                    <div>
+                        <h5>Item 1</h5>
+                        <span>Here is some information about item 1</span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img class="project-img" src="images/marvel.jpg">
+                <div class="project-card">
+                    <h5>Item 1</h5>
+                    <span>Here is some information about item 1</span>
+                </div>
+            </div>
+            <div>
+                <img class="project-img" src="images/#">
+                <div class="project-card">
+                    <h5>Item 1</h5>
+                    <span>Here is some information about item 1</span>
+                </div>
+            </div>
+            <div>
+                <img class="project-img" src="images/#">
+                <div class="project-card">
+                    <h5>Item 1</h5>
+                    <span>Here is some information about item 1</span>
+                </div>
+            </div>
+            <div>
+                <img class="project-img" src="images/#">
+                <div class="project-card">
+                    <h5>Item 1</h5>
+                    <span>Here is some information about item 1</span>
+                </div>
+            </div>
         </div>
-        <div id="content">
+        <!--<div id="content">-->
 
-        </div>
+        <!--</div>-->
     </div>
     <footer>
-
+        <div>
+            <a href="#nav" class="scrolly" id="up-button">
+                    <span>
+                        <!--<i class="fa fa-arrow-down" aria-hidden="true"></i>-->
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    </span>
+            </a>
+            <ul>
+                <li>
+                    <a href="https://www.github.com/ThargelionZ">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/ThargelionZ">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://plus.google.com/+MylesParker-thargelion">
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/myles-parker-b77b90132">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
+            <span>&copy Myles Parker 2017. All Rights Reserved.</span>
+        </div>
     </footer>
     <script src="javascript/jquery-3.2.1.min.js"></script>
     <script src="javascript/jquery.scrolly.min.js"></script>
