Added favicon, and added a fade to the page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="images/favicons/blackm.ico">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Myles Parker | Portfolio</title>
 </head>
-<body>
-
-    <header class="fade">
+<body class="fade">
+    <header>
         <div id="overlay">
             <div id="mobile-nav">
                 <a class="mob-navi" href="#">Home</a>
@@ -47,7 +47,7 @@
     <div id="container">
         <div id="intro" class="shadow-bottom">
             <div id="image">
-                <img id="profile-img" src="images/profile-picture.jpg">
+                <img id="profile-img" src="images/main-page/profile-picture.jpg">
             </div>
             <div id="intro-description">
                 <h3>Hi, I'm Myles.</h3>
