Created skills section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div id="overlay">
             <div id="mobile-nav">
-                <a class="mob-navi" href="#">Home</a>
+                <a class="mob-navi" href="index.html">Home</a>
                 <a class="mob-navi" href="#">About Me</a>
                 <a class="mob-navi" href="#">Contact</a>
                 <a class="mob-navi" href="#">Projects</a>
@@ -54,56 +54,167 @@
                 <p>I'm 18 years old and I absolutely love to program. Ever since I was a little child, I thought computers were the best thing ever. I watched my dad (now a system admin) control the computer and tell it to do things. I wanted that kind of power over technology. I wanted to be able to use it to my advantage to create. Last year I started programming in Java for a high school class. I also took a summer class where we learned web development. Now I am able to program in C, HTML, CSS, JavaScript, Java, and SQL.</p>
             </div>
         </div>
-        <div id="projects-heading" class="shadow-bottom">
-            <h2>Projects</h2>
-            <h3>Take a look at the projects I've been working on. I have games and apps that can help you better enjoy your day!</h3>
-        </div>
-        <div id="carousel">
-            <div>
-                <img class="project-img" src="images/mistborn.jpg">
-                <div class="project-card">
-                    <h5>Item 1</h5>
-                    <span>Here is some information about item 1</span>
+        <div id="skills-section">
+            <div id="skills-heading" class="shadow-bottom">
+                <h2>Skills</h2>
+            </div>
+            <div id="skills">
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/html.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">HTML 5</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/css.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">CSS 3</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/javascript.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">JavaScript</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/angular.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">Angular 4</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/nodejs.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">Node.js</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/jquery.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">jQuery</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/ruby.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">Ruby</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/rails.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">Ruby on Rails</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/sql.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div class="progress">50%</div>
+                        </div>
+                        <div class="skill-title">PostgreSQL</div>
+                    </div>
                 </div>
             </div>
-            <div>
-                <img class="project-img" src="images/movies.jpg">
-                <div class="project-card">
-                    <div>
+        </div>
+        <div id="projects-section">
+            <div id="projects-heading" class="shadow-bottom">
+                <div>
+                    <h2>Projects</h2>
+                    <h3>Take a look at the projects I've been working on. I have games and apps that can help you better enjoy your day!</h3>
+                </div>
+            </div>
+            <div id="carousel">
+                <div>
+                    <img class="project-img" src="images/mistborn.jpg">
+                    <div class="project-card">
+                        <h5>Item 1</h5>
+                        <span>Here is some information about item 1</span>
+                    </div>
+                </div>
+                <div>
+                    <img class="project-img" src="images/movies.jpg">
+                    <div class="project-card">
+                        <div>
+                            <h5>Item 1</h5>
+                            <span>Here is some information about item 1</span>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <img class="project-img" src="images/marvel.jpg">
+                    <div class="project-card">
+                        <h5>Item 1</h5>
+                        <span>Here is some information about item 1</span>
+                    </div>
+                </div>
+                <div>
+                    <img class="project-img" src="images/#">
+                    <div class="project-card">
+                        <h5>Item 1</h5>
+                        <span>Here is some information about item 1</span>
+                    </div>
+                </div>
+                <div>
+                    <img class="project-img" src="images/#">
+                    <div class="project-card">
+                        <h5>Item 1</h5>
+                        <span>Here is some information about item 1</span>
+                    </div>
+                </div>
+                <div>
+                    <img class="project-img" src="images/#">
+                    <div class="project-card">
                         <h5>Item 1</h5>
                         <span>Here is some information about item 1</span>
                     </div>
                 </div>
             </div>
-            <div>
-                <img class="project-img" src="images/marvel.jpg">
-                <div class="project-card">
-                    <h5>Item 1</h5>
-                    <span>Here is some information about item 1</span>
-                </div>
-            </div>
-            <div>
-                <img class="project-img" src="images/#">
-                <div class="project-card">
-                    <h5>Item 1</h5>
-                    <span>Here is some information about item 1</span>
-                </div>
-            </div>
-            <div>
-                <img class="project-img" src="images/#">
-                <div class="project-card">
-                    <h5>Item 1</h5>
-                    <span>Here is some information about item 1</span>
-                </div>
-            </div>
-            <div>
-                <img class="project-img" src="images/#">
-                <div class="project-card">
-                    <h5>Item 1</h5>
-                    <span>Here is some information about item 1</span>
-                </div>
-            </div>
         </div>
+
         <!--<div id="content">-->
 
         <!--</div>-->
