--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="skill-right">
                         <div class="progress-bar">
-                            <div class="progress">50%</div>
+                            <div id="progress-1" class="progress"></div>
                         </div>
                         <div class="skill-title">HTML 5</div>
                     </div>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="skill-right">
                         <div class="progress-bar">
-                            <div class="progress">50%</div>
+                            <div id="progress-2" class="progress"></div>
                         </div>
                         <div class="skill-title">CSS 3</div>
                     </div>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="skill-right">
                         <div class="progress-bar">
-                            <div class="progress">50%</div>
+                            <div id="progress-3" class="progress"></div>
                         </div>
                         <div class="skill-title">JavaScript</div>
                     </div>
@@ -98,20 +98,9 @@
                     </div>
                     <div class="skill-right">
                         <div class="progress-bar">
-                            <div class="progress">50%</div>
+                            <div id="progress-4" class="progress"></div>
                         </div>
                         <div class="skill-title">Angular 4</div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill-left">
-                        <img class="skill-img" src="images/main-page/skills/nodejs.png">
-                    </div>
-                    <div class="skill-right">
-                        <div class="progress-bar">
-                            <div class="progress">50%</div>
-                        </div>
-                        <div class="skill-title">Node.js</div>
                     </div>
                 </div>
                 <div class="skill">
@@ -120,20 +109,9 @@
                     </div>
                     <div class="skill-right">
                         <div class="progress-bar">
-                            <div class="progress">50%</div>
+                            <div id="progress-5" class="progress"></div>
                         </div>
                         <div class="skill-title">jQuery</div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill-left">
-                        <img class="skill-img" src="images/main-page/skills/ruby.png">
-                    </div>
-                    <div class="skill-right">
-                        <div class="progress-bar">
-                            <div class="progress">50%</div>
-                        </div>
-                        <div class="skill-title">Ruby</div>
                     </div>
                 </div>
                 <div class="skill">
@@ -142,9 +120,31 @@
                     </div>
                     <div class="skill-right">
                         <div class="progress-bar">
-                            <div class="progress">50%</div>
+                            <div id="progress-6" class="progress"></div>
                         </div>
                         <div class="skill-title">Ruby on Rails</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/ruby.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div id="progress-7" class="progress"></div>
+                        </div>
+                        <div class="skill-title">Ruby</div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-left">
+                        <img class="skill-img" src="images/main-page/skills/nodejs.png">
+                    </div>
+                    <div class="skill-right">
+                        <div class="progress-bar">
+                            <div id="progress-8" class="progress"></div>
+                        </div>
+                        <div class="skill-title">Node.js</div>
                     </div>
                 </div>
                 <div class="skill">
@@ -153,7 +153,7 @@
                     </div>
                     <div class="skill-right">
                         <div class="progress-bar">
-                            <div class="progress">50%</div>
+                            <div id="progress-9" class="progress"></div>
                         </div>
                         <div class="skill-title">PostgreSQL</div>
                     </div>
@@ -169,49 +169,51 @@
             </div>
             <div id="carousel">
                 <div>
-                    <img class="project-img" src="images/mistborn.jpg">
+                    <img class="project-img" src="images/main-page/projects/golf.jpg">
                     <div class="project-card">
-                        <h5>Item 1</h5>
-                        <span>Here is some information about item 1</span>
+                        <h5>Golf Scorecard</h5>
+                        <p>A golf scorecard that searches for golf courses around you and displays the yardage, par, and handicap for every hole.</p>
+                        <a href="https://thargelionz.github.io/golfScorecard/">Check it out here!</a>
                     </div>
                 </div>
                 <div>
-                    <img class="project-img" src="images/movies.jpg">
+                    <img class="project-img" src="images/main-page/projects/kirby.jpg">
                     <div class="project-card">
-                        <div>
-                            <h5>Item 1</h5>
-                            <span>Here is some information about item 1</span>
-                        </div>
+                        <h5>Flappy Kirby</h5>
+                        <p>A flappy bird rendition game I created using Nintendo's ball-like character Kirby.</p>
+                        <a href="https://thargelionz.github.io/flappyKirby/">Play here!</a>
                     </div>
                 </div>
                 <div>
-                    <img class="project-img" src="images/marvel.jpg">
+                    <img class="project-img" src="images/main-page/projects/todo.jpg">
                     <div class="project-card">
-                        <h5>Item 1</h5>
-                        <span>Here is some information about item 1</span>
+                        <h5>Todo Application</h5>
+                        <p>A todo application where you can make unlimited lists, with unlimited list items. Just create a list and you will be on your way to getting things done.</p>
+                        <a href="https://thargelionz.github.io/todo/">Check it out here!</a>
                     </div>
                 </div>
-                <div>
-                    <img class="project-img" src="images/#">
-                    <div class="project-card">
-                        <h5>Item 1</h5>
-                        <span>Here is some information about item 1</span>
-                    </div>
-                </div>
-                <div>
-                    <img class="project-img" src="images/#">
-                    <div class="project-card">
-                        <h5>Item 1</h5>
-                        <span>Here is some information about item 1</span>
-                    </div>
-                </div>
-                <div>
-                    <img class="project-img" src="images/#">
-                    <div class="project-card">
-                        <h5>Item 1</h5>
-                        <span>Here is some information about item 1</span>
-                    </div>
-                </div>
+                <!--<div>-->
+                    <!--<img class="project-img" src="images/main-page/projects/contacts.png">-->
+                    <!--<div class="project-card">-->
+                        <!--<h5>Contacts Application</h5>-->
+                        <!--<p>A basic contacts app where you can add, edit, and delete contacts.</p>-->
+                        <!--<a href="https://mylesparker-contacts-app1.herokuapp.com/">Check it out here!</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<img class="project-img" src="images/#">-->
+                    <!--<div class="project-card">-->
+                        <!--<h5>Item 1</h5>-->
+                        <!--<p>Here is some information about item 1</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--<img class="project-img" src="images/#">-->
+                    <!--<div class="project-card">-->
+                        <!--<h5>Item 1</h5>-->
+                        <!--<p>Here is some information about item 1</p>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div>
         </div>
 
