Added about-me basic functionality, design optimum

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="images/favicons/blackm.ico">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <title>Myles Parker | Portfolio</title>
 </head>
 <body class="fade" onload="findYear()">
