--- a/pages/about.html
+++ b/pages/about.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/mobile.css">
     <title>Myles Parker | About Me</title>
 </head>
-<body>
+<body onload="findYear()">
     <header>
         <div id="overlay">
             <div id="mobile-nav">
@@ -43,35 +44,44 @@
                 <img class="section-img" src="../images/computer-programming.jpeg">
             </div>
             <div class="content-section">
-                <h2 class="section-header">Title</h2>
-                <p class="section-description">Description</p>
+                <div class="section-heading">
+                    <h2 class="section-header">Programming</h2>
+                    <p class="section-description">I absolutely love to program. Ever since I was a little child, I thought computers were the best thing ever. I watched my dad (now a system admin) control the computer and tell it to do things. I wanted that kind of power over technology. I wanted to be able to use it to my advantage to create. Last year I started programming in Java for a high school class. I also took a summer class where we learned web development. Now I am able to program in C, HTML, CSS, JavaScript, Java, and SQL. I always learn new things every time I program!</p>
+                </div>
             </div>
         </div>
         <div class="section shadow-bottom">
             <div class="content-section">
-                <h2 class="section-header">Title</h2>
-                <p class="section-description">Description</p>
+                <div class="section-heading">
+                    <h2 class="section-header">Reading</h2>
+                    <p class="section-description">Reading is one of the pass times that I feel actually benefits me. I learn new words, see different strategies in writing, and I am able to enjoy the excellence of the story. As a reader I most like to read fiction novels. Some of the series that I have read are Harry Potter, Lord of the Rings, and Mistborn. My absolute favorite author right at the moment is Brandon Sanderson. He is an author that is just so smart, and it's fun to read some of his ideas. I can't ever put his books down! Every chapter is a cliff hangar.</p>
+                </div>
             </div>
             <div class="image-section">
-                <img class="section-img" src="../images/computer-programming.jpeg">
+                <img class="section-img" src="../images/reading.jpg">
             </div>
         </div>
         <div class="section shadow-bottom">
             <div class="image-section">
-                <img class="section-img" src="../images/computer-programming.jpeg">
+                <img class="section-img" src="../images/movies-1.jpg">
             </div>
             <div class="content-section">
-                <h2 class="section-header">Title</h2>
-                <p class="section-description">Description</p>
+                <div class="section-heading">
+                    <h2 class="section-header">Movies</h2>
+                    <p class="section-description">I love to watch movies. Not the chick-flicks of course, but the action movies and the thrillers. Watching people fight to survive is actually pretty fun to watch. The thick plots of evil against good, are just so good. My favorite movies are Marvel movies. Super hero battles are the best. My favorite movie of all time is Inception. The thinking involved is just so deep! Go Christopher Nolan! He also did the batman trilogy, which is legendary to all that watch it.</p>
+                </div>
             </div>
+
         </div>
         <div class="section shadow-bottom">
             <div class="content-section">
-                <h2 class="section-header">Title</h2>
-                <p class="section-description">Description</p>
+                <div class="section-heading">
+                    <h2 class="section-header">Video Games</h2>
+                    <p class="section-description">As you might expect, I am a nerd. I love super heroes, I love programming, and next on the list, I love video games. I was born into a generation where I played video games. Ever since I was very young I have been playing these games. My favorite gaming company is Nintendo, but I also like Microsoft's Halo as well. My favorite series of all time is The Legend of Zelda, because you fight enemies, but you also solve puzzles at the same time. I will probably game for a very long time, and now that I know how to program, I have more respect for those that make these games.</p>
+                </div>
             </div>
             <div class="image-section">
-                <img class="section-img" src="../images/computer-programming.jpeg">
+                <img class="section-img" src="../images/nintendo.jpg">
             </div>
         </div>
     </div>
