--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </div>
             <div id="nav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="pages/about.html">About Me</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Resumè</a></li>
+                    <li><a id="active" class="navi third after" href="index.html">Home</a></li>
+                    <li><a class="navi third after" href="pages/about.html">About Me</a></li>
+                    <li><a class="navi third after" href="#">Contact</a></li>
+                    <li><a class="navi third after" href="#">Projects</a></li>
+                    <li><a class="navi third after" href="#">Resumè</a></li>
                 </ul>
             </div>
             <div id="main-heading">
