--- a/pages/about.html
+++ b/pages/about.html
@@ -25,19 +25,28 @@
             </div>
             <div id="nav">
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Resumè</a></li>
+                    <li><a class="navi third after" href="../index.html">Home</a></li>
+                    <li><a id="active" class="navi third after" href="../pages/about.html">About Me</a></li>
+                    <li><a class="navi third after" href="../pages/contact.html">Contact</a></li>
+                    <li><a class="navi third after" href="../pages/projects.html">Projects</a></li>
+                    <li><a class="navi third after" href="../pages/resume.html">Resumè</a></li>
                 </ul>
             </div>
             <div id="about-heading">
-                <h1><a href="../">About Me</a></h1>
+                <h1><a href="../pages/about.html">About Me</a></h1>
             </div>
         </div>
     </header>
 
+    <div id="about-intro" class="shadow-bottom">
+        <div id="about-image">
+            <img id="profile-img" src="../images/about/profile-pic-2.jpg">
+        </div>
+        <div id="about-intro-description">
+            <h3>Myles Parker</h3>
+            <!--<p>Thanks for coming to my site! Feel free to browse and learn a little bit more about me!</p>-->
+        </div>
+    </div>
     <div id="container">
         <div class="section shadow-bottom">
             <div class="image-section">
@@ -51,14 +60,14 @@
             </div>
         </div>
         <div class="section shadow-bottom">
+            <div class="image-section">
+                <img class="section-img" src="../images/reading.jpg">
+            </div>
             <div class="content-section">
                 <div class="section-heading">
                     <h2 class="section-header">Reading</h2>
                     <p class="section-description">Reading is one of the pass times that I feel actually benefits me. I learn new words, see different strategies in writing, and I am able to enjoy the excellence of the story. As a reader I most like to read fiction novels. Some of the series that I have read are Harry Potter, Lord of the Rings, and Mistborn. My absolute favorite author right at the moment is Brandon Sanderson. He is an author that is just so smart, and it's fun to read some of his ideas. I can't ever put his books down! Every chapter is a cliff hangar.</p>
                 </div>
-            </div>
-            <div class="image-section">
-                <img class="section-img" src="../images/reading.jpg">
             </div>
         </div>
         <div class="section shadow-bottom">
@@ -74,14 +83,36 @@
 
         </div>
         <div class="section shadow-bottom">
+            <div class="image-section">
+                <img class="section-img" src="../images/about/nintendo.jpg">
+            </div>
             <div class="content-section">
                 <div class="section-heading">
                     <h2 class="section-header">Video Games</h2>
                     <p class="section-description">As you might expect, I am a nerd. I love super heroes, I love programming, and next on the list, I love video games. I was born into a generation where I played video games. Ever since I was very young I have been playing these games. My favorite gaming company is Nintendo, but I also like Microsoft's Halo as well. My favorite series of all time is The Legend of Zelda, because you fight enemies, but you also solve puzzles at the same time. I will probably game for a very long time, and now that I know how to program, I have more respect for those that make these games.</p>
                 </div>
             </div>
+        </div>
+        <div class="section shadow-bottom">
             <div class="image-section">
-                <img class="section-img" src="../images/nintendo.jpg">
+                <img class="section-img" src="../images/about/tv-shows.jpg">
+            </div>
+            <div class="content-section">
+                <div class="section-heading">
+                    <h2 class="section-header">TV Shows</h2>
+                    <p class="section-description">I love to watch TV. There are many different shows and genres that I like to watch. I love shows like Psych, and Marvel's Agents of Shield, but I also like cartoons like the Simpsons. On the other side of the spectrum, I also like to watch Anime. My favorite Anime is Fullmetal Alchemist. I also am a fan of shows like the office if I have nothing else to watch. TV is my number one thing that I do in my free time besides music.</p>
+                </div>
+            </div>
+        </div>
+        <div class="section shadow-bottom">
+            <div class="image-section">
+                <img class="section-img" src="../images/about/80s.jpg">
+            </div>
+            <div class="content-section">
+                <div class="section-heading">
+                    <h2 class="section-header">Music</h2>
+                    <p class="section-description">Music is one of my passions. I feel like music has to have an emotional impact on me to be considered good music. All the music that is created now does not have the feeling it use to and it sends inappropriate messages to listeners. My favorite music is 80's Pop. There's nothing like A-ha's "Take on Me" or Tears for Fears' "Everybody Wants to Rule the World." They just don't make music with feeling like they used to.</p>
+                </div>
             </div>
         </div>
     </div>
